<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">J3MClient</string>
    <string name="list_of_orders">List of orders</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_show_order">Order details</string>
    <string name="hello_world">Hello world!</string>
    <string name="order">Order</string>
    <string name="order_id">Order Id</string>
    <string name="order_email">Email</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="products">Products</string>
    <string name="set_order_as_sent">Set order as sent</string>
    <string name="refresh">Refresh</string>
    <string name="server_connection_failed">Server connection failed</string>
    <string name="pending">pending</string>

    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="zip">ZIP</string>
    <string name="transport">Transport</string>
    <string name="state">State</string>


</resources>
